--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-waveview": "^1.1.0",
     "react-native-worklets": "^0.7.2",
     "react-redux": "^9.2.0",
+    "react-vector-icons": "^0.0.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
